--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,11 @@ categories = ["science::bioinformatics", "science::neuroscience", "filesystem", 
 
 edition = "2024"
 
+exclude = [
+    "code_tests/*",
+    "shell.nix",
+]
+
 [dependencies]
 chrono = { version = "0.4.42", default-features = false, features = ["std"] }
 sha2 = "0.10.9"
